finish the demands

--- a/Day_9-11/style.css
+++ b/Day_9-11/style.css
@@ -1,11 +1,11 @@
-.body, ul, li, h1, h2, h3, h4, h5, h6, p, form, dl, dt, dd { 
+body, ul, li, h1, h2, h3, h4, h5, h6, p, form, dl, dt, dd { 
     margin: 0px; 
     padding: 0px; 
     font-size: 12px; 
     font-weight: normal; 
 	list-style-type: none;
 }
-}
+
 ul { 
 	list-style: none; 
 }
